# disponera

./: .gitignore  README.md  pyproject.toml
data/: disponera.desktop  velora.desktop  velorganize.desktop
qml/: Main.qml
src/disponera/: app.py  caldav.py  local.py  mdhighlight.py  notes.py  settings.py  theme.py  tmp0o9uah4t.qml  tmp92j0u9cc.qml  tmpk5wuk_co.qml  todomodel.py
src/disponera/qml/: CalendarPane.qml  Main.qml  SettingsPane.qml  TodoPane.qml
src/disponera/qml/components/: AddDialog.qml  CalendarDialog.qml  ColorField.qml  DatePicker.qml  EventDialog.qml  InputRow.qml  MarkdownField.qml  OverviewGrid.qml  Picker.qml  ProjectDialog.qml  SectionLabel.qml  SegmentedRow.qml  SettingCard.qml  SettingDivider.qml  SettingsAbout.qml  SettingsAppearance.qml  SettingsCalendar.qml  SettingsField.qml  SettingsGeneral.qml  SettingsIntegrations.qml  SettingsLists.qml  SliderRow.qml  TaskBoard.qml  TaskDialog.qml  ToggleRow.qml
src/velora/: app.py  caldav.py  local.py  notes.py  runner.py  settings.py  theme.py  tmp3ifvhzue.qml  tmprh7ytoi3.qml  todomodel.py
src/velora/qml/: CalendarPane.qml  Main.qml  SettingsPane.qml
src/velora/qml/components/: ColorField.qml  EventDialog.qml  NotesField.qml  OverviewGrid.qml  PillButton.qml  SettingsAppearance.qml  SettingsCalendar.qml  SettingsIntegrations.qml  SettingsLists.qml  TaskBoard.qml  TaskDialog.qml  TimeField.qml  TimePicker.qml
src/velorganize/: app.py  caldav.py  notes.py  runner.py  theme.py  todomodel.py
src/velorganize/qml/: CalendarPane.qml  Main.qml  TodoPane.qml
(+4 files in other folders)
