[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disponera"
version = "0.1.0"
description = "Calendar + Todo + Quick-Notes — CalDAV-backed, markdown-first"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6"]

[project.scripts]
disponera = "disponera.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
disponera = ["qml/**/*.qml"]
